--- a/sway/config
+++ b/sway/config
@@ -32,7 +32,7 @@ bindsym $mod+Return exec --no-startup-id alacritty
 bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -theme dmenu -show run
+bindsym $mod+d exec --no-startup-id rofi-multiple-monitors -theme dmenu -show run
 
 # Scratchpad
 bindsym $mod+Shift+minus move scratchpad
@@ -109,35 +109,36 @@ workspace $ws7 output eDP-1
 workspace $ws8 output eDP-1
 workspace $ws9 output eDP-1
 workspace $ws10 output eDP-1
+workspace "3$ws1" output DP-1
 workspace $ws11 output DP-1
 workspace $ws_music output eDP-1
 
 # switch to workspace
 bindsym $mod+m exec --no-startup-id start-spotfy $ws_music
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws10
+bindsym $mod+1 exec --no-startup-id move_sway_workspace "$ws1"
+bindsym $mod+2 exec --no-startup-id move_sway_workspace "$ws2"
+bindsym $mod+3 exec --no-startup-id move_sway_workspace "$ws3"
+bindsym $mod+4 exec --no-startup-id move_sway_workspace "$ws4"
+bindsym $mod+5 exec --no-startup-id move_sway_workspace "$ws5"
+bindsym $mod+6 exec --no-startup-id move_sway_workspace "$ws6"
+bindsym $mod+7 exec --no-startup-id move_sway_workspace "$ws7"
+bindsym $mod+8 exec --no-startup-id move_sway_workspace "$ws8"
+bindsym $mod+9 exec --no-startup-id move_sway_workspace "$ws9"
+bindsym $mod+0 exec --no-startup-id move_sway_workspace "$ws10"
 bindcode $mod+49 workspace $ws11
 
 # move focused container to workspace
 bindsym $mod+Shift+m move container to workspace $ws_music
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+1 exec --no-startup-id move_container_to_sway_workspace $ws1
+bindsym $mod+Shift+2 exec --no-startup-id move_container_to_sway_workspace $ws2
+bindsym $mod+Shift+3 exec --no-startup-id move_container_to_sway_workspace $ws3
+bindsym $mod+Shift+4 exec --no-startup-id move_container_to_sway_workspace $ws4
+bindsym $mod+Shift+5 exec --no-startup-id move_container_to_sway_workspace $ws5
+bindsym $mod+Shift+6 exec --no-startup-id move_container_to_sway_workspace $ws6
+bindsym $mod+Shift+7 exec --no-startup-id move_container_to_sway_workspace $ws7
+bindsym $mod+Shift+8 exec --no-startup-id move_container_to_sway_workspace $ws8
+bindsym $mod+Shift+9 exec --no-startup-id move_container_to_sway_workspace $ws9
+bindsym $mod+Shift+0 exec --no-startup-id move_container_to_sway_workspace $ws10
 bindcode $mod+Shift+49 move container to workspace $ws11
 
 # reload the configuration file
@@ -205,3 +206,6 @@ input type:keyboard {
         # We remap the right alt key to the compose key and the caps lock key to the escape key
         xkb_options caps:escape,compose:ralt
 }
+
+output eDP-1 pos 0 1800
+output DP-1 pos 1920 0
