--- a/sway/config
+++ b/sway/config
@@ -88,16 +88,16 @@ bindsym $mod+shift+s exec --no-startup-id sh ~/.config/sway/lock.sh
 # workspaces.
 set $ws11 "98: "
 set $ws_music "99: "
-set $ws1 "101: 1  "
-set $ws2 "102: 2  "
-set $ws3 "103: 3  "
-set $ws4 "104: 4  "
-set $ws5 "105: 5  "
-set $ws6 "106: 6  "
-set $ws7 "107: 7  "
-set $ws8 "108: 8  "
-set $ws9 "109: 9  "
-set $ws10 "110: 10  "
+set $ws1 "101: 1 "
+set $ws2 "102: 2 "
+set $ws3 "103: 3 "
+set $ws4 "104: 4 "
+set $ws5 "105: 5 "
+set $ws6 "106: 6 "
+set $ws7 "107: 7 "
+set $ws8 "108: 8 "
+set $ws9 "109: 9 "
+set $ws10 "110: 10 "
 
 workspace $ws1 output eDP-1
 workspace $ws2 output eDP-1
@@ -109,7 +109,7 @@ workspace $ws7 output eDP-1
 workspace $ws8 output eDP-1
 workspace $ws9 output eDP-1
 workspace $ws10 output eDP-1
-workspace "3$ws1" output DP-1
+workspace "3101: 1 " output DP-1
 workspace $ws11 output DP-1
 workspace $ws_music output eDP-1
 
@@ -178,6 +178,9 @@ default_border pixel 1
 
 # Support for Picture in Picture mode
 for_window [title="Picture-in-Picture"] border pixel 1, fullscreen disable, sticky enable, floating enable, resize set 480 270, move window to position 1420 790
+for_window [title="Picture in picture"] border pixel 1, fullscreen disable, sticky enable, floating enable, resize set 480 270, move window to position 1420 790
+
+for_window [title="Gameboy Emulator"] floating enable
 
 # We use waybar as a status bar. The configuration is located in ~/.config/waybar/config
 exec_always waybar
@@ -196,6 +199,9 @@ exec --no-startup-id redshift
 
 # Dunst is a notification daemon
 exec --no-startup-id dunst
+
+# Solaar is a device manager for Logitech devices
+exec --no-startup-id solaar -w hide
 
 # This script remap the left alt key to the right alt key
 # We will later use the right alt key as the compose key
