--- a/sway/config
+++ b/sway/config
@@ -20,13 +20,13 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessDown exec --no-startup-id doas /usr/bin/backlight_control less
 bindsym XF86MonBrightnessUp exec --no-startup-id doas /usr/bin/backlight_control more
 
-bindsym Print exec --no-startup-id scrot '%Y-%m-%d_$wx$h_scrot.png' -e 'mv $f ~/Pictures/'
+bindsym Print exec --no-startup-id bash -c 'slurp | grim -g - "~/Pictures/$(slurp | grim -g - screenshot.png)"'
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec --no-startup-id alacritty
+bindsym $mod+Return exec --no-startup-id alacritty-same-dir
 
 # kill focused window
 bindsym $mod+Shift+q kill
