--- a/sway/config
+++ b/sway/config
@@ -20,7 +20,7 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 bindsym XF86MonBrightnessDown exec --no-startup-id doas /usr/bin/backlight_control less
 bindsym XF86MonBrightnessUp exec --no-startup-id doas /usr/bin/backlight_control more
 
-bindsym Print exec --no-startup-id bash -c 'slurp | grim -g - "~/Pictures/$(slurp | grim -g - screenshot.png)"'
+bindsym Print exec --no-startup-id bash -c 'slurp | grim -g - "/home/lancelot/Pictures/$(date -Is).png"'
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -142,7 +142,7 @@ bindsym $mod+Shift+0 exec --no-startup-id move_container_to_sway_workspace $ws10
 bindcode $mod+Shift+49 move container to workspace $ws11
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+bindsym $mod+Shift+c exec "pkill waybar && swaymsg reload"
 bindsym $mod+Shift+r restart
 bindsym $mod+Shift+e exec "swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will shutdown you GUI' -B 'Yes, exit sway' 'sway exit'"
 
